--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,4 +2,7 @@
 
 .main__content {
   background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 262px);
 }
