--- a/src/components/DeckItemPage/CardsHolder/CardsHolder.css
+++ b/src/components/DeckItemPage/CardsHolder/CardsHolder.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  max-width: 80%;
+  max-width: 95%;
   padding-bottom: 50px;
 }
 
@@ -28,34 +28,67 @@
 @media screen and (max-width: 820px) {
   .cardsHolder__input {
     max-width: 450px;
-    min-width: 450px;
+    /*min-width: 450px;*/
   }
 }
 
 @media screen and (max-width: 720px) {
   .cardsHolder__input {
-    max-width: 350px;
-    min-width: 270px;
+    max-width: 450px;
+    min-width: 450px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .cardsHolder__button-block {
+    max-width: 450px;
+    min-width: 450px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .cardsHolder__button-block button {
+    max-width: 210px;
+    min-width: 210px;
   }
 }
 
 @media screen and (max-width: 570px) {
   .cardsHolder__input {
     padding-left: 15px;
-    min-width: 250px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .cardsHolder__input {
+    max-width: 95%;
+    min-width: 95%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .cardsHolder__button-block {
+    max-width: 270px;
+    min-width: 270px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .cardsHolder__button-block button {
+    width: 270px;
   }
 }
 
 .cardsHolder__input_active {
-  background-color: rgb(148, 228, 126);
+  background-color: rgb(211 255 181);
 } 
 
 .cardsHolder__input_active:focus { 
-  background-color: rgb(148, 228, 126);
+  background-color: rgb(211 255 181);
 }
 .cardsHolder__input_active:active { 
   font-weight: bold;
-  background-color: rgb(148, 228, 126); 
+  background-color: rgb(211 255 181);
 }
 
 .cardsHolder__card {
@@ -108,6 +141,7 @@
   justify-content: center;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-bottom: 10px;
   border: 0.5px solid rgb(239 239 239);
 }
 
@@ -132,12 +166,27 @@
   justify-content: space-between;
 }
 
-@media screen and (max-width: 670px) {
+@media screen and (max-width: 630px) {
+  .cardsHolder__button-block {
+    gap: 30px;
+    padding-top: 30px;
+  }
+}
+
+@media screen and (max-width: 530px) {
   .cardsHolder__button-block {
     flex-direction: column;
     width: 270px;
     gap: 30px;
     padding-top: 30px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .cardsHolder__button-block button {
+    width: 250px;
+    max-width: 250px;
+    min-width: 250px;
   }
 }
 
@@ -153,20 +202,24 @@
   margin-left: auto;
 }
 
+@media screen and (max-width: 900px) {
+  .cardsHolder__content {
+    padding: 70px 0 70px 0;
+  }
+}
+
 @media screen and (max-width: 820px) {
   .cardsHolder__content {
-    max-width: 450px;
-    min-width: 450px;
-    padding: 70px 0 70px 0;
+    /*max-width: 450px;
+    min-width: 450px;*/
     margin: 0;
   }
 }
 
 @media screen and (max-width: 720px) {
   .cardsHolder__content {
-    max-width: 350px;
+    /*max-width: 350px;*/
     padding: 70px 0 70px 0;
-    margin: 0;
   }
 }
 
@@ -198,6 +251,30 @@
   width: 100%;
 }
 
+.cardsHolder__arrow-container {
+  justify-content: flex-end;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 200px;
+  align-content: center;
+  align-self: center;
+  margin-bottom: 20px;
+}
+
+.cardsHolder__arrow1 {
+  width: 90px;
+  height: 80px;
+}
+
+.cardsHolder__arrow1:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: 1s;
+}
+
 @media screen and (max-width: 770px) {
   .cardsHolder__text {
     font-size: 14px;
@@ -211,6 +288,12 @@
     font-size: 14px;
     line-height: 22px;
     max-width: 364px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .cardsHolder__form {
+    align-self: center;
   }
 }
 
@@ -224,8 +307,14 @@
 @media screen and (max-width: 650px) {
   .cardsHolder__content {
     padding: 70px 14px 70px 14px;
-    max-width: 280px;
-    min-width: 280px;
+  }
+}
+
+@media screen and (max-width: 386px) {
+  .cardsHolder__content {
+    max-width: 270px;
+    min-width: 270px;
+    padding: 70px 10px 70px 10px;
   }
 }
 
