--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -17,58 +17,112 @@
   .footer-wrap {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    max-width: 840px;
-    padding-left: 10px;
+    justify-content: space-between;
+    max-width: 1040px;
     list-style: none;
     margin: 0;
     flex-wrap: wrap;
+    gap: 200px;
+    padding: 0;
   }
-  
-  @media screen and (max-width: 700px) {
-    .footer-wrap {
-      flex-direction: column;}
+
+@media screen and (max-width: 1030px) {
+  .footer-wrap {
+    gap: 100px
   }
-  
-  .footer__link {
-    line-height: 38px;
-    font-size: 36px;
-    font-weight: 400;
-    margin: 0;
-    min-width: 220px;
+}
+
+@media screen and (max-width: 780px) {
+  .footer-wrap {
+    gap: 50px;
   }
+}
+
+@media screen and (max-width: 550px) {
+  .footer-wrap {
+    gap: 20px
+  }
+}
   
+@media screen and (max-width: 460px) {
+  .footer-wrap {
+    flex-direction: column;
+  }
+}
+  
+.footer__link {
+  line-height: 38px;
+  font-size: 36px;
+  font-weight: 400;
+  margin: 0;
+  min-width: 220px;
+}
+
+@media screen and (max-width: 710px) {
   .footer__link1 {
-    cursor: pointer;
-    text-decoration: none;
-    list-style: none;
-    color: #ffffff;
     display: flex;
-    padding-bottom: 20px;
-    transition: transform .5s ease-in-out;
-    align-items: center;
+    flex-direction: column;
   }
+}
+
+@media screen and (max-width: 710px) {
+  .footer__link1 img {
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .footer__link1 {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .footer__link1 img {
+    padding-right: 10px;
+  }
+}
   
-  .footer__link:hover .footer__link1 {
-    transform: scale(1.05);
-    overflow: hidden;
-    }
+.footer__link1 {
+  cursor: pointer;
+  text-decoration: none;
+  list-style: none;
+  color: #ffffff;
+  display: flex;
+  padding-bottom: 20px;
+  transition: transform .5s ease-in-out;
+  align-items: center;
+}
+
+.footer__link:hover .footer__link1 {
+  transform: scale(1.05);
+  overflow: hidden;
+}
   
-    .footer__link:hover .ooter__link1::after {
+.footer__link:hover .ooter__link1::after {
   animation: countdown 2s linear 1 forwards;
-  }
+}
   
-  .footer__link:hover .footer__link1 {opacity: 0.5;}
-  
-  @media screen and (max-width: 700px) {
-    .footer__link {
-      line-height: 36px;
-      font-size: 34px;}
+.footer__link:hover .footer__link1 {opacity: 0.5;}
+ 
+@media screen and (max-width: 960px) {
+  .footer__link {
+    line-height: 36px;
+    font-size: 22px;
   }
+}
   
-  .footer__social-icon {
-    width: 56px;
-    height: 56px;
-    padding-right: 20px;
-    align-self: center;
+.footer__social-icon {
+  width: 56px;
+  height: 56px;
+  padding-right: 20px;
+  align-self: center;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-link1 {
+    font-size: 22px;
+    line-height: 26px;
   }
+}
