--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -11,21 +11,59 @@
   display: flex;
   flex-direction: column;
   padding: 0px 70px 20px 70px;
-  max-width: 1040px;
-  min-height: 400px;
+  min-width: 1020px;
+  min-height: 300px;
   margin-right: auto;
   margin-left: auto;
 }
 
-.aboutMe__button-content {
+.decks__content {
   justify-items: center;
+  align-items: center;
   position: relative;
   display: flex;
   flex-direction: column;
-  padding: 70px 70px 70px 70px;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: rgb(210 210 210);
+  padding: 30px 70px 70px 70px;
+  /*background-color: rgb(252 252 252);*/
+}
+
+.decks__content-wrap {
+  justify-items: center;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  max-width: 1040px;
+  min-height: 250px;
+  /*background-color: rgb(252 252 252);*/
+  flex-wrap: wrap;
+}
+
+.decks__item {
+  display: block;
+  width: 240px;
+  min-height: 36px;
+  height: fit-content;
+  line-height: 32px;
+  font-size: 20px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: #333;
+  background-color: #f8f9e7;
+  border: none;
+  letter-spacing: 2px;
+  text-align: center;
+  position: relative;
+  transition: all .35s;
+  margin: 10px auto 0 auto;
+  border-radius: 20px;
+  justify-content: center;
+  padding-top: 10px;
+  border: 0.5px solid rgb(239 239 239);
+}
+
+.decks__item-text {
+  margin: 0;
+  min-height: 46px;
 }
 
 .aboutMe__title {
@@ -37,61 +75,29 @@
   padding-bottom: 23px;
 }
 
-.aboutMe__name-text {
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  font-size: 50px;
-  line-height: 58px;
-  margin: 0;
-  padding-bottom: 18px;
-}
-
 .aboutMe__status-text {
   font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 20px;
+  line-height: 30px;
   margin: 0;
   padding-bottom: 26px;
+  font-weight: 400;
+  font-size: 28px;
 }
 
-.aboutMe__story-text {
-  font-family: 'Inter', sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 28px;
-  margin: 40px auto 40px auto;
-  min-height: 50px;
-  width: 710px;
-  border-radius: 0 10px 0 10px;
-  display: flex;
-  justify-items: center;
-  align-items: center;
-  padding: 12px;
-  background: white;
-}
 
 .aboutMe__text {
   font-family: 'Inter', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 18px;
-  line-height: 28px;
+  line-height: 26px;
   margin: 0;
-  max-width: 600px;
-  padding-right: 49px;
   padding-bottom: 20px;
-}
-
-.aboutMe__text1:hover {
-  cursor: pointer;
-  opacity: 0.5;
-  transition: 0.4s ease;
 }
 
 .aboutMe__column {
   display: flex;
   flex-direction: column;
-  max-width: 650px;
+  max-width: 770px;
   justify-content: space-between;
 }
 
@@ -100,25 +106,24 @@
   flex-direction: row;
   padding-top: 66px;
   justify-content: space-between;
+  gap: 20px;
 }
 
 .aboutMe__photo {
-  width: 270px;
-  height: 327px;
-  border-radius: 10px;
-}
-
-.aboutMe__column1 {
-  padding-bottom: 30px;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: right bottom;
 }
 
 .aboutMe__link {
   text-decoration: none;
-  color: rgb(121, 118, 118);
+  color: rgb(160 156 156);
   font-family: 'Inter', sans-serif;
   font-weight: 500;
-  font-size: 17px;
-  line-height: 19px;
+  font-size: 18px;
+  line-height: 26px;
   padding-top: 30px;
   margin-bottom: 30px;
 }
@@ -129,144 +134,31 @@
   transition: 1s;
 }
 
-.wrapper {
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-}
-
-.aboutMe__button {
-  display: block;
-  width: 740px;
-  min-height: 40px;
-  height: fit-content;
-  line-height: 40px;
-  font-size: 18px;
-  font-family: sans-serif;
-  text-decoration: none;
-  color: #333;
-  background-color: white;
-  border: none;
-  letter-spacing: 2px;
-  text-align: center;
-  position: relative;
-  transition: all .35s;
-  margin: 10px auto 0 auto;
-  border-radius: 20px;
-}
-
-.aboutMe__button1:hover {
-  font-weight: 600;
-  transform: scale(1.3);
-}
-
-@media screen and (max-width: 650px) {
-  .aboutMe__button1:hover {
-    transform: none;
-  }
-}
-
-.aboutMe__button:after{
+.decks__item:after{
   position: absolute;
   content: "";
   top: 0;
   left: 0;
   width: 0;
   height: 100%;
-  background: #38c6c1;
+  background-color: white;
+  background: #61fff4;
   transition: all .35s;
   opacity: 0.4;
   border-radius: 20px;
-}
-
-.aboutMe__button1:after{
-  background: linear-gradient(to right, yellow, red, blue, black, green);
 }
 
 .aboutMe__button-blocked {
   display: none;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 30px;
-}
-
-.container img {
-  width: 120px;
-  height: 120px;
-  margin-top: 20px;
-}
-
-.btn {
-  text-decoration: none;
-  position: relative;
-  overflow: hidden;
-  height: 40px;
-  width: 200px;
-  font-weight: 600;
-  border-radius: 20px;
-  border: none;
-}
-
-.btn:hover {
-  box-shadow: 1px 1px 25px 10px rgba(183, 234, 64, 0.4);
-  background: linear-gradient(to right, rgb(229, 255, 192), transparent, rgb(229, 255, 192));
-  text-shadow: #333;
-  transition: all .5s;
-  transform: scale(1.1);
-  border: none;
-}
-
-.aboutMe__button:hover:after{
+.decks__item:hover:after{
   width: 100%;
 }
 
-.aboutMe__res-img {
-  opacity: 0;
-  animation: ani 2s forwards;
-  /*transition: all .5s;*/
-}
-
-@media screen and (max-width: 850px) {
-  .aboutMe__button {
-    min-width: 260px;
-    width: calc(90%);
-    font-size: 14px;
-    height: fit-content;
-    line-height: 30px;
-  }
-}
-
-@media screen and (max-width: 850px) {
-  .aboutMe__story-text {
-    min-width: 240px;
-    width: calc(90%);
-    height: -moz-fit-content;
-    height: fit-content;
-    font-size: 16px;
-  }
-}
-
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 1160px) {
   .aboutMe__content {
-    padding: 90px 50px 20px 50px;
-  }
-}
-
-@media screen and (max-width: 770px) {
-  .aboutMe__button-content {
-    padding: 90px 50px 90px 50px;
-  }
-}
-
-@media screen and (max-width: 770px) {
-  .aboutMe__photo {
-    width: 255px;
-    height: 307px;
+    min-width: 200px;
   }
 }
 
@@ -287,46 +179,70 @@
 }
 
 @media screen and (max-width: 1050px) {
-  .aboutMe__name-text {
+  .aboutMe__status-text {
+    max-width: 420px;
     position: absolute;
-    font-size: 40px;
-    line-height: 40px;
-    padding-bottom: 16px;
-    top: 90px;
-    left: 90px;
-    color: #343434;
+    top: 80px;
+    left: 70px;
   }
 }
 
 @media screen and (max-width: 1050px) {
-  .aboutMe__status-text {
-    width: 220px;
-    position: absolute;
-    top: 140px;
-    left: 90px;
-  }
-}
-
-@media screen and (max-width: 770px) {
-  .aboutMe__status-text {
-    font-size: 14px;
-    line-height: 22px;
-    left: 70px;
+  .aboutMe__column1 {
+    padding-top: 160px;
+    padding-bottom: 0;
   }
 }
 
 @media screen and (max-width: 1050px) {
   .aboutMe__photo {
-    padding-bottom: 40px;
+    position: absolute;
+    top: 40px;
+    right: 90px;
+    width: 150px;
+    height: 150px;
   }
 }
 
 @media screen and (max-width: 770px) {
-  .aboutMe__name-text {
-    font-size: 40px;
-    line-height: 40px;
-    padding-bottom: 16px;
-    left: 70px;
+  .aboutMe__status-text {
+    max-width: 220px;
+    top: 60px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .aboutMe__photo {
+    position: static;
+    right: 90px;
+    width: 210px;
+    height: 210px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .aboutMe__column1 {
+    padding-top: 30px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .aboutMe__column {
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .aboutMe__status-text {
+    position: static;
+    max-width: 400px;
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .decks__content {
+    padding-top: 20px;
   }
 }
 
@@ -334,24 +250,6 @@
   .aboutMe__text-block {
     flex-direction: column-reverse;
     padding-top: 60px;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .aboutMe__photo {
-    padding-bottom: 40px;
-    /*align-self: center;*/
-    width: 292px;
-    height: 352px;
-  }
-}
-
-@media screen and (max-width: 350px) {
-  .aboutMe__photo {
-    padding-bottom: 40px;
-    /*align-self: center;*/
-    width: 265px;
-    height: 330px;
   }
 }
 
@@ -392,6 +290,18 @@
     padding-bottom: 28px;
     font-size: 18px;
     line-height: 22px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .decks__item {
+    width: 380px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .decks__item {
+    width: 280px;
   }
 }
 
