--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -1,7 +1,9 @@
 @import url(../../vendor/Railroad/stylesheet.css);
+
 .pageNotFound {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .pageNotFound__title {
@@ -11,7 +13,7 @@
   line-height: 169px;
   text-align: center;
   margin: 0;
-  padding-top: 246px;
+  padding-top: 100px;
 }
 
 .pageNotFound__text {
@@ -24,6 +26,10 @@
   padding-top: 5px;
 }
 
+.pageNotFound__text:first-of-type {
+  padding-bottom: 50px;
+}
+
 .pageNotFound__link {
   font-family: 'Inter';
   font-weight: 400;
@@ -32,7 +38,7 @@
   text-align: center;
   margin: 0;
   text-decoration: none;
-  padding-top: 184px;
+  padding-top: 84px;
 }
 
 .pageNotFound__link:hover {
@@ -43,7 +49,7 @@
 
 @media screen and (max-width: 770px) {
   .pageNotFound__title {
-    padding-top: 408px;
+    padding-top: 100px;
   }
 }
 
@@ -51,7 +57,7 @@
   .pageNotFound__title {
     font-size: 80px;
     line-height: 97px;
-    padding-top: 329px;
+    padding-top: 100px;
   }
 }
 
@@ -64,6 +70,6 @@
 
 @media screen and (max-width: 550px) {
   .pageNotFound__link {
-    padding-top: 284px;
+    padding-top: 84px;
   }
 }
