--- a/src/components/DeckItemPage/DeckItemPage.css
+++ b/src/components/DeckItemPage/DeckItemPage.css
@@ -18,11 +18,12 @@
   margin-left: auto;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 760px) {
 
   .deckItem__section {
     padding: 40px 20px 20px;
     align-items: inherit;
+    max-width: 97vw;
   }
 }
 
@@ -34,63 +35,11 @@
   }
 }
 
-.deckItem__title-container {
-  justify-content: space-between;
-  display: flex;
-  flex-direction: row;
-  max-width: 1040px;
-  flex-wrap: wrap;
-  position: sticky;
-  top: 0;
-  z-index: 3;
-  background: white;
-  margin-bottom: 20px;
-  border-bottom: 1px solid #ddd;
-  align-items: center;
-  padding-bottom: 15px;
-  padding-top: 10px;
-}
-
-@media screen and (max-width: 580px) {
-
-  .deckItem__title-container {
-    /*justify-content: center;*/
-    text-align: center;
-  }
-}
-
-.deckItem__title {
-  font-family: Inter, sans-serif;
-  line-height: 30px;
-  margin: 0;
-  font-weight: 400;
-  font-size: 28px;
-  color: rgb(67 67 67);
-  text-align: start;
-  max-width: calc(100% - 100px);
-}
-
-@media screen and (max-width: 740px) {
-
-  .deckItem__title {
-    font-size: 20px;
-    font-weight: 600;
-  }
-}
-
-@media screen and (max-width: 340px) {
-
-  .deckItem__title {
-    font-size: 18px;
-    font-weight: 600;
-  }
-}
-
 .deckItem__text {
   font-family: Inter, sans-serif;
   line-height: 30px;
   margin: 0;
-  font-weight: 400;
+  font-weight: 1.3;
   font-size: 20px;
   color: rgb(67 67 67);
 }
@@ -105,6 +54,13 @@
 
   .deckItem__text {
     font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+
+  .deckItem__text {
+    font-size: 12px;
   }
 }
 
@@ -212,12 +168,6 @@
   width: 100%;
   cursor: pointer;
 }
-
-/*.deckItem__train-button:hover {
-  opacity: 0.5;
-  cursor: pointer;
-  transition: 1s;
-}*/
 
 .deckItem__train-button:hover:after {
   width: 100%;
