--- a/src/components/CardsHolder/CardsHolder.css
+++ b/src/components/CardsHolder/CardsHolder.css
@@ -1,52 +1,70 @@
-@import url(../../../vendor/Railroad/stylesheet.css);
-
-@keyframes ani {
-
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
+@import url(../../vendor/Railroad/stylesheet.css);
 
 .cardsHolder__form {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  max-width: 80%;
-  padding-top: 30px;
+  /*max-width: 95%;*/
+  padding-bottom: 50px;
+  position: relative;
 }
 
 .cardsHolder__input {
   display: block;
-  height: 40px;
+  height: 80px;
+  min-width: 600px;
   border-radius: 20px;
   padding-left: 20px;
   background-color: rgb(255 255 243);
-  border: 1px solid #e4e3de;
+  border: 0.5px solid #e4e3de;
+  box-sizing: border-box;
+  font-size: 26px;
+}
+
+.cardsHolder__input_active {
+  background-color: rgb(211 255 181);
+}
+
+.cardsHolder__input_active:focus {
+  background-color: rgb(211 255 181);
+}
+
+.cardsHolder__input_active:active {
+  font-weight: bold;
+  background-color: rgb(211 255 181);
+}
+
+@media screen and (max-width: 720px) {
+
+  .cardsHolder__input {
+    max-width: 478px;
+    min-width: 478px;
+  }
 }
 
 @media screen and (max-width: 570px) {
 
   .cardsHolder__input {
     padding-left: 15px;
-    min-width: 250px;
   }
 }
 
-.cardsHolder__input_active {
-  background-color: rgb(148 228 126);
+@media screen and (max-width: 530px) {
+
+  .cardsHolder__input {
+    max-width: 100%;
+    min-width: 100%;
+    height: 60px;
+    font-size: 22px;
+  }
 }
 
-.cardsHolder__input_active:focus {
-  background-color: rgb(148 228 126);
-}
+@media screen and (max-width: 720px) {
 
-.cardsHolder__input_active:active {
-  font-weight: bold;
-  background-color: rgb(148 228 126);
+  .cardsHolder__button-block button {
+    max-width: 210px;
+    min-width: 210px;
+  }
 }
 
 .cardsHolder__card {
@@ -76,45 +94,78 @@
   width: 100px;
 }
 
+.cardsHolder__button:hover:after {
+  width: 100%;
+}
+
 .cardsHolder__button {
+  display: block;
+  width: 240px;
+  min-height: 36px;
+  height: fit-content;
+  line-height: 32px;
+  font-size: 20px;
+  font-family: sans-serif;
   text-decoration: none;
-  border: none;
+  color: #333;
+  background-color: #f8f9e7;
+  letter-spacing: 2px;
+  text-align: center;
   position: relative;
-  overflow: hidden;
-  height: 40px;
-  width: 200px;
-  font-weight: 600;
+  transition: all 0.35s;
   border-radius: 20px;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border: 0.5px solid rgb(239 239 239);
 }
 
-.cardsHolder__button:hover {
-  box-shadow: 1px 1px 25px 10px rgb(234 64 64 / 0.4);
-  background: linear-gradient(
-    to right,
-    rgb(255 192 196),
-    transparent,
-    rgb(255 192 192)
-  );
-  text-shadow: #333;
-  transition: all 0.5s;
-  transform: scale(1.1);
-  border: none;
-}
-
-.cardsHolder__button1 {
-  margin-top: 20px;
+.cardsHolder__button::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  /*background-color: white;*/
+  background: #61fff4;
+  transition: all 0.35s;
+  opacity: 0.4;
+  border-radius: 20px;
 }
 
 .cardsHolder__button-block {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  justify-content: space-between;
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 630px) {
+
+  .cardsHolder__button-block {
+    gap: 30px;
+    padding-top: 30px;
+  }
+}
+
+@media screen and (max-width: 530px) {
 
   .cardsHolder__button-block {
     flex-direction: column;
+    width: 100%;
+    gap: 30px;
+    padding-top: 30px;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 530px) {
+
+  .cardsHolder__button-block button {
+    width: 100%;
+    max-width: 100%;
+    min-width: 250px;
   }
 }
 
@@ -123,11 +174,49 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  padding: 60px 70px 100px;
+  padding: 70px 0 100px;
   max-width: 1140px;
+  width: 100%;
   min-height: 400px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (max-width: 900px) {
+
+  .cardsHolder__content {
+    padding: 70px 0;
+  }
+}
+
+@media screen and (max-width: 820px) {
+
+  .cardsHolder__content {
+    /*max-width: 450px;
+    min-width: 450px;*/
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 720px) {
+
+  .cardsHolder__content {
+    /*max-width: 350px;*/
+    padding: 70px 0;
+  }
+}
+
+.cardsHolder__title-raw {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 520px) {
+
+  .cardsHolder__title-raw {
+    flex-direction: column;
+  }
 }
 
 .cardsHolder__title {
@@ -139,15 +228,20 @@
   padding-bottom: 23px;
 }
 
-.cardsHolder__pensil {
-  width: 25px;
-  height: 25px;
+.cardsHolder__hint {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 27px;
+  margin: 0;
+  padding-bottom: 23px;
+  color: rgb(207 203 203);
 }
 
-.cardsHolder__pensil:hover {
+.cardsHolder__hint:hover {
   opacity: 0.5;
   cursor: pointer;
-  transition: 0.5s ease;
+  transition: 0.5s;
 }
 
 .container {
@@ -165,46 +259,32 @@
   margin-top: 20px;
 }
 
-.btn {
-  text-decoration: none;
-  border: none;
-  position: relative;
-  overflow: hidden;
-  height: 40px;
-  width: 200px;
-  font-weight: 600;
-  border-radius: 20px;
-}
-
-.btn:hover {
-  box-shadow: 1px 1px 25px 10px rgb(183 234 64 / 0.4);
-  background: linear-gradient(
-    to right,
-    rgb(229 255 192),
-    transparent,
-    rgb(229 255 192)
-  );
-  text-shadow: #333;
-  transition: all 0.5s;
-  transform: scale(1.1);
-  border: none;
-}
-
 .aboutMe__button:hover:after {
   width: 100%;
 }
 
-.aboutMe__res-img {
-  opacity: 0;
-  animation: ani 2s forwards;
-  /*transition: all .5s;*/
+.cardsHolder__arrow-container {
+  justify-content: flex-end;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 200px;
+  align-content: center;
+  align-self: center;
+  margin-bottom: 20px;
 }
 
-@media screen and (max-width: 770px) {
+.cardsHolder__arrow1 {
+  width: 90px;
+  height: 80px;
+}
 
-  .cardsHolder__content {
-    padding: 90px 50px;
-  }
+.cardsHolder__arrow1:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: 1s;
 }
 
 @media screen and (max-width: 770px) {
@@ -236,7 +316,16 @@
 @media screen and (max-width: 650px) {
 
   .cardsHolder__content {
-    padding: 70px 14px;
+    padding: 32px 14px;
+  }
+}
+
+@media screen and (max-width: 386px) {
+
+  .cardsHolder__content {
+    max-width: 270px;
+    min-width: 270px;
+    padding: 70px 10px;
   }
 }
 
