--- a/src/pages/WordItemPage/WordItemPage.css
+++ b/src/pages/WordItemPage/WordItemPage.css
@@ -1,6 +1,6 @@
 @import url(../../vendor/Railroad/stylesheet.css);
 
-.main__content1 {
+.wordItem {
   background-color: #fff;
   min-height: calc(100vh - 262px);
 }
@@ -164,77 +164,6 @@
   opacity: 0.5;
   cursor: pointer;
   transition: 1s;
-}
-
-.deckItem__text:hover {
-  opacity: 0.5;
-  cursor: pointer;
-  transition: 1s;
-}
-
-.decks__button-container {
-  display: flex;
-  flex-direction: row;
-  width: 600px;
-  align-self: center;
-  margin-bottom: 20px;
-  justify-content: space-between;
-}
-
-.deckItem__button {
-  display: block;
-  width: 240px;
-  min-height: 36px;
-  height: fit-content;
-  line-height: 32px;
-  font-size: 20px;
-  font-family: sans-serif;
-  text-decoration: none;
-  color: #333;
-  background-color: #f8f9e7;
-  letter-spacing: 2px;
-  text-align: center;
-  position: relative;
-  transition: all 0.35s;
-  margin: 10px auto 0;
-  border-radius: 20px;
-  justify-content: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border: 0.5px solid rgb(239 239 239);
-}
-
-.deckItem__button:after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  /*background-color: white;*/
-  background: #61fff4;
-  transition: all 0.35s;
-  opacity: 0.4;
-  border-radius: 20px;
-}
-
-.deckItem__button:hover:after {
-  width: 100%;
-}
-
-@media screen and (max-width: 640px) {
-
-  .decks__button-container {
-    flex-direction: column;
-    max-width: 280px;
-  }
-}
-
-@media screen and (max-width: 580px) {
-
-  .deckItem__words {
-    justify-content: center;
-  }
 }
 
 @media screen and (max-width: 780px) {
