--- a/src/components/CardsHolder/CardsHolder.css
+++ b/src/components/CardsHolder/CardsHolder.css
@@ -16,7 +16,7 @@
 @media screen and (max-width: 900px) {
 
   .cardsHolder__content {
-    padding: 70px 0;
+    padding: 32px 0;
   }
 }
 
@@ -24,13 +24,6 @@
 
   .cardsHolder__content {
     margin: 0;
-  }
-}
-
-@media screen and (max-width: 720px) {
-
-  .cardsHolder__content {
-    padding: 70px 0;
   }
 }
 
@@ -44,9 +37,7 @@
 @media screen and (max-width: 386px) {
 
   .cardsHolder__content {
-    max-width: 270px;
-    min-width: 270px;
-    padding: 70px 10px;
+    padding: 20px 10px;
   }
 }
 
@@ -54,7 +45,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  /*max-width: 95%;*/
   padding-bottom: 50px;
   position: relative;
 }
@@ -102,8 +92,8 @@
 @media screen and (max-width: 530px) {
 
   .cardsHolder__input {
-    max-width: 100%;
-    min-width: 100%;
+    max-width: 85vw;
+    min-width: 85vw;
     height: 60px;
     font-size: 22px;
   }
@@ -135,7 +125,7 @@
 
   .cardsHolder__button-block {
     flex-direction: column;
-    width: 100%;
+    width: 85vw;
     gap: 30px;
     padding-top: 30px;
     align-items: center;
@@ -150,33 +140,6 @@
     min-width: 250px;
   }
 }
-
-/*.cardsHolder__card {
-  display: flex;
-  flex-direction: row;
-  justify-items: end;
-  align-items: center;
-  background-color: rgb(241 245 227);
-  border-radius: 20px;
-  border: 1px solid rgb(208 205 205);
-  margin: 20px 0;
-  gap: 10px;
-  width: 350px;
-  padding: 5px 15px;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 570px) {
-
-  .cardsHolder__card {
-    width: 250px;
-  }
-}
-
-.cardsHolder__card p {
-  margin: 0;
-  width: 100px;
-}*/
 
 .cardsHolder__button {
   display: block;
@@ -197,7 +160,6 @@
   justify-content: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-bottom: 10px;
   border: 0.5px solid rgb(239 239 239);
 }
 
@@ -212,7 +174,6 @@
   left: 0;
   width: 0;
   height: 100%;
-  /*background-color: white;*/
   background: #61fff4;
   transition: all 0.35s;
   opacity: 0.4;
@@ -223,13 +184,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-@media screen and (max-width: 520px) {
-
-  .cardsHolder__title-raw {
-    flex-direction: column;
-  }
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
 .cardsHolder__title {
