--- a/src/components/TitleContainer/TitleContainer.css
+++ b/src/components/TitleContainer/TitleContainer.css
@@ -14,6 +14,7 @@
   align-items: center;
   padding-bottom: 15px;
   padding-top: 10px;
+  width: 100%;
 }
 
 @media screen and (max-width: 580px) {
