--- a/src/components/WordCard/WordCard.css
+++ b/src/components/WordCard/WordCard.css
@@ -24,27 +24,66 @@
   margin: 5px;
   display: flex;
   flex-direction: column;
-  max-width: 280px;
+  max-width: 240px;
+  width: 100%;
+  overflow: hidden;
+  gap: 6px;
+}
+
+@media screen and (max-width: 790px) {
+
+  .wordCard {
+    max-width: 220px;
+    padding: 20px 12px;
+  }
+}
+
+@media screen and (max-width: 490px) {
+
+  .wordCard {
+    min-width: 120px;
+    padding: 20px 8px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+
+  .wordCard {
+    max-width: 120px;
+    padding: 16px 6px;
+    margin: 3px;
+  }
 }
 
 .word {
   font-family: Inter, sans-serif;
-  line-height: 40px;
+  line-height: 1.3;
   margin: 0;
-  padding-bottom: 26px;
-  padding-top: 16px;
   font-weight: 600;
-  font-size: 38px;
+  font-size: 26px;
   color: rgb(67 67 67);
   text-align: center;
+}
+
+@media screen and (max-width: 490px) {
+
+  .word {
+    line-height: 20px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+
+  .word {
+    font-size: 16px;
+  }
 }
 
 .text {
   font-family: Inter, sans-serif;
   line-height: 20px;
   margin: 0;
-  padding-bottom: 6px;
-  padding-top: 6px;
   font-weight: 500;
   font-size: 15px;
   color: rgb(153 148 148);
@@ -64,6 +103,16 @@
   text-align: center;
   box-sizing: border-box;
   padding: 0 3px;
+  margin: 4px 0;
+}
+
+@media screen and (max-width: 390px) {
+
+  .translation {
+    font-size: 14px;
+    line-height: 26px;
+    margin: 6px 0;
+  }
 }
 
 .translation1 {
@@ -93,7 +142,7 @@
 
 .wordCard__img {
   width: 60px;
-  height: 60px;
+  height: 20px;
   margin: 0 auto;
 }
 
@@ -101,45 +150,5 @@
   opacity: 0.5;
   cursor: pointer;
   transition: 1s;
-}
-
-@media screen and (max-width: 490px) {
-
-  .word {
-    line-height: 20px;
-    font-size: 18px;
-    padding-bottom: 10px;
-  }
-}
-
-@media screen and (max-width: 390px) {
-
-  .word {
-    font-size: 16px;
-  }
-}
-
-@media screen and (max-width: 390px) {
-
-  .translation {
-    font-size: 14px;
-    line-height: 26px;
-    margin: 6px 0;
-  }
-}
-
-@media screen and (max-width: 490px) {
-
-  .wordCard {
-    min-width: 120px;
-  }
-}
-
-@media screen and (max-width: 390px) {
-
-  .wordCard {
-    max-width: 120px;
-    padding: 6px;
-    margin: 3px;
-  }
+  filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 0.9));
 }
