--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -1,7 +1,7 @@
+@import "../../components/App/App";
 @import url(../../vendor/Railroad/stylesheet.css);
 
 @keyframes rotate {
-
   from {
     transform: rotateX(0deg);
   }
@@ -12,103 +12,97 @@
 }
 
 .wordCard {
-  background-color: #ebecde;
+  background-color: $color-background-card;
   border-radius: 20px;
   justify-content: center;
-  border: 0.5px solid rgb(239 239 239);
+  border: 0.5px solid $color-border-grey;
   min-width: 160px;
   min-height: 80px;
   flex-wrap: wrap;
   padding: 20px;
-  /*margin-bottom: 30px;*/
   margin: 5px;
   display: flex;
   flex-direction: column;
   max-width: 240px;
-  width: 100%;
+  width: fit-content;
   overflow: hidden;
   gap: 6px;
-}
-
-@media screen and (max-width: 790px) {
-
-  .wordCard {
+  
+  @media (max-width: 790px) {
     max-width: 220px;
     padding: 20px 12px;
   }
-}
 
-@media screen and (max-width: 490px) {
-
-  .wordCard {
+  @media (max-width: 490px) {
     min-width: 120px;
     padding: 20px 8px;
   }
-}
 
-@media screen and (max-width: 390px) {
-
-  .wordCard {
+  @media (max-width: 390px) {
     max-width: 120px;
     padding: 16px 6px;
     margin: 3px;
   }
+
+  &__img {
+    width: 60px;
+    height: 20px;
+    margin: 0 auto;
+
+    &:hover {
+      opacity: 0.5;
+      cursor: pointer;
+      transition: 1s;
+      filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 0.9));
+    }
+  }
 }
 
 .word {
-  font-family: Inter, sans-serif;
+  font-family: $font-sans;
   line-height: 1.3;
   margin: 0;
   font-weight: 600;
   font-size: 26px;
-  color: rgb(67 67 67);
+  color: $color-font-darkgrey;
   text-align: center;
-}
-
-@media screen and (max-width: 490px) {
-
-  .word {
+  
+  @media (max-width: 490px) {
     line-height: 20px;
     font-size: 18px;
   }
-}
 
-@media screen and (max-width: 390px) {
-
-  .word {
+  @media (max-width: 390px) {
     font-size: 16px;
   }
 }
 
 .text {
-  font-family: Inter, sans-serif;
+  font-family: $font-sans;
   line-height: 20px;
   margin: 0;
   font-weight: 500;
   font-size: 15px;
-  color: rgb(153 148 148);
+  color: $color-font-grey;
   text-align: center;
-}
 
-.text:hover {
-  opacity: 0.5;
-  cursor: pointer;
-  transition: 0.5s;
+  &:hover {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: 0.5s;
+  }
 }
 
 .translation {
-  background-color: white;
+  background-color: $color-background;
   line-height: 40px;
   border-radius: 10px;
   text-align: center;
   box-sizing: border-box;
   padding: 0 3px;
   margin: 4px 0;
-}
 
-@media screen and (max-width: 390px) {
-
-  .translation {
+  @media (max-width: 390px) {
     font-size: 14px;
     line-height: 26px;
     margin: 6px 0;
@@ -116,39 +110,33 @@
 }
 
 .translation1 {
-  background-color: white;
+  background-color: $color-background;
   line-height: 40px;
   border-radius: 10px;
   text-align: center;
 }
 
-.translation2:hover {
-  opacity: 0.5;
-  cursor: pointer;
-  transition: 1s;
+.translation2 {
+  background-color: $color-background;
+  line-height: 40px;
+  border-radius: 10px;
+  text-align: center;
+
+  &:hover {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: 1s;
+  }
 }
 
 .word__backside {
-  font-family: Inter, sans-serif;
+  font-family: $font-sans;
   line-height: 30px;
   margin: 0;
   padding-bottom: 26px;
   padding-top: 16px;
   font-weight: 600;
   font-size: 38px;
-  color: rgb(67 67 67);
+  color: $color-font-darkgrey;
   text-align: center;
-}
-
-.wordCard__img {
-  width: 60px;
-  height: 20px;
-  margin: 0 auto;
-}
-
-.wordCard__img:hover {
-  opacity: 0.5;
-  cursor: pointer;
-  transition: 1s;
-  filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 0.9));
 }
