--- a/src/pages/DeckItemPage/DeckItemPage.scss
+++ b/src/pages/DeckItemPage/DeckItemPage.scss
@@ -1,7 +1,7 @@
 @import url(../../vendor/Railroad/stylesheet.css);
 
 .deckItem__content {
-  background-color: #fff;
+  background-color: var(--color-background);
   min-height: calc(100vh - 262px);
 }
 
@@ -89,46 +89,4 @@
     gap: 20px;
     align-items: center;
   }
-}
-
-.deckItem__train-button {
-  display: block;
-  width: 240px;
-  min-height: 36px;
-  height: fit-content;
-  line-height: 32px;
-  font-size: 20px;
-  font-family: sans-serif;
-  text-decoration: none;
-  color: #333;
-  background-color: #f4f4f4;
-  letter-spacing: 2px;
-  text-align: center;
-  position: relative;
-  transition: all 0.35s;
-  border-radius: 20px;
-  justify-content: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border: 0.5px solid rgb(239 239 239);
-  margin: 10px 15px;
-}
-
-.deckItem__train-button:after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  /*background-color: white;*/
-  background: #61fff4;
-  transition: all 0.35s;
-  opacity: 0.4;
-  border-radius: 20px;
-}
-
-.deckItem__train-button:hover:after {
-  width: 100%;
-  cursor: pointer;
 }
