--- a/src/pages/NumbersTrainPage/NumbersTrainPage.scss
+++ b/src/pages/NumbersTrainPage/NumbersTrainPage.scss
@@ -1,7 +1,7 @@
 @import url(../../vendor/Railroad/stylesheet.css);
 
 .numbersTraining__content {
-  background-color: #fff;
+  background-color: var(--color-background);
   min-height: calc(100vh - 262px);
   max-width: 1040px;
   width: 100%;
