--- a/src/components/ui/BigTopicButton/BigTopicButton.module.scss
+++ b/src/components/ui/BigTopicButton/BigTopicButton.module.scss
@@ -1,7 +1,6 @@
-@import "../../components/App/App";
-@import url(../../vendor/Railroad/stylesheet.css);
+@import "../../../styles/variables";
 
-.trainButton {
+.bigTopicButton {
   display: block;
   width: 240px;
   min-height: 36px;
@@ -11,7 +10,7 @@
   font-family: sans-serif;
   text-decoration: none;
   color: $color-font-base;
-  background-color: $color-button-training;
+  background-color: $color-button-topic;
   letter-spacing: 2px;
   text-align: center;
   position: relative;
@@ -19,8 +18,23 @@
   border-radius: 20px;
   justify-content: center;
   padding-top: 10px;
-  padding-bottom: 10px;
   border: 0.5px solid $color-border-grey;
+  margin: 10px 20px 0;
+
+  &__mainText {
+    margin: 0;
+    min-height: 32px;
+    font-size: 28px;
+    line-height: 28px;
+    padding-top: 20px;
+  }
+
+  &__text {
+    margin: 0;
+    min-height: 56px;
+    font-size: 16px;
+    color: $color-font-grey;
+  }
 
   &:after {
     position: absolute;
@@ -38,5 +52,26 @@
   &:hover:after {
     width: 100%;
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 870px) {
+
+  .bigTopicButton {
+    margin: 10px auto 0;
+  }
+}
+
+@media screen and (max-width: 660px) {
+
+  .bigTopicButton {
+    width: 380px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+
+  .bigTopicButton {
+    width: 280px;
   }
 }
