--- a/src/components/ui/TopicButton/TopicButton.module.scss
+++ b/src/components/ui/TopicButton/TopicButton.module.scss
@@ -1,9 +1,6 @@
-//@use 'src/components/App/App';
-@import "../../components/App/App";
-@import url(../../vendor/Railroad/stylesheet.css);
+@import "../../../styles/variables";
 
-
-.bigTopicButton {
+.topicButton {
   display: block;
   width: 240px;
   min-height: 36px;
@@ -18,26 +15,11 @@
   text-align: center;
   position: relative;
   transition: all 0.35s;
+  margin: 10px auto 0;
   border-radius: 20px;
   justify-content: center;
   padding-top: 10px;
   border: 0.5px solid $color-border-grey;
-  margin: 10px 20px 0;
-
-  &__mainText {
-    margin: 0;
-    min-height: 32px;
-    font-size: 28px;
-    line-height: 28px;
-    padding-top: 20px;
-  }
-
-  &__text {
-    margin: 0;
-    min-height: 56px;
-    font-size: 16px;
-    color: $color-font-grey;
-  }
 
   &:after {
     position: absolute;
@@ -56,25 +38,17 @@
     width: 100%;
     cursor: pointer;
   }
-}
 
-@media screen and (max-width: 870px) {
-
-  .bigTopicButton {
-    margin: 10px auto 0;
+  &__itemText {
+    margin: 0;
+    min-height: 46px;
   }
-}
 
-@media screen and (max-width: 660px) {
-
-  .bigTopicButton {
+  @media (max-width: 660px) {
     width: 380px;
   }
-}
-
-@media screen and (max-width: 420px) {
-
-  .bigTopicButton {
+  
+  @media  (max-width: 420px) {
     width: 280px;
   }
 }
