--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -1,5 +1,4 @@
-@import "../../components/App/App";
-@import url(../../vendor/Railroad/stylesheet.css);
+@import "../../styles/variables";
 
 @keyframes rotate {
   from {
@@ -27,6 +26,7 @@
   width: fit-content;
   overflow: hidden;
   gap: 6px;
+  align-items: center;
   
   @media (max-width: 790px) {
     max-width: 220px;
@@ -50,9 +50,7 @@
     margin: 0 auto;
 
     &:hover {
-      opacity: 0.5;
-      cursor: pointer;
-      transition: 1s;
+      @include hovered;
       filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 0.9));
     }
   }
@@ -77,6 +75,26 @@
   }
 }
 
+.word1 {
+  font-family: $font-sans;
+  line-height: 1.3;
+  margin: 0;
+  font-weight: 600;
+  font-size: 20px;
+  color: $color-font-darkgrey;
+  text-align: center;
+  width: min-content;
+  
+  @media (max-width: 490px) {
+    line-height: 20px;
+    font-size: 18px;
+  }
+
+  @media (max-width: 390px) {
+    font-size: 16px;
+  }
+}
+
 .text {
   font-family: $font-sans;
   line-height: 20px;
@@ -87,20 +105,19 @@
   text-align: center;
 
   &:hover {
-    opacity: 0.5;
-    cursor: pointer;
-    transition: 0.5s;
+    @include hovered;
   }
 }
 
 .translation {
   background-color: $color-background;
-  line-height: 40px;
+  line-height: 1.8;
   border-radius: 10px;
   text-align: center;
   box-sizing: border-box;
   padding: 0 3px;
   margin: 4px 0;
+  width: 100%;
 
   @media (max-width: 390px) {
     font-size: 14px;
@@ -111,27 +128,27 @@
 
 .translation1 {
   background-color: $color-background;
-  line-height: 40px;
+  line-height: 1.8;
   border-radius: 10px;
   text-align: center;
+  width: 100%;
 }
 
 .translation2 {
   background-color: $color-background;
-  line-height: 40px;
+  line-height: 1.8;
   border-radius: 10px;
   text-align: center;
+  width: 100%;
 
   &:hover {
-    opacity: 0.5;
-    cursor: pointer;
-    transition: 1s;
+    @include hovered;
   }
 }
 
 .word__backside {
   font-family: $font-sans;
-  line-height: 30px;
+  line-height: 1.5;
   margin: 0;
   padding-bottom: 26px;
   padding-top: 16px;
