--- a/src/components/TitleContainer/TitleContainer.module.scss
+++ b/src/components/TitleContainer/TitleContainer.module.scss
@@ -2,10 +2,9 @@
 @import url(../../vendor/Railroad/stylesheet.css);
 
 .titleContainer {
+  @include row;
   justify-content: space-between;
-  display: flex;
-  flex-direction: row;
-  max-width: 1040px;
+  max-width: 900px;
   position: sticky;
   top: 0;
   z-index: 3;
@@ -15,6 +14,11 @@
   align-items: center;
   padding-bottom: 15px;
   padding-top: 10px;
+  width: calc(100vw - 160px);
+
+  @media (max-width: 760px) {
+    width: calc(100vw - 60px);
+  }
 
   @media (max-width: 580px) {
     text-align: center;
@@ -28,11 +32,8 @@
   }
 
   &__title {
-    font-family: $font-sans;
-    line-height: 1.4;
+    @include font(28px, 1.4, 400);
     margin: 0;
-    font-weight: 400;
-    font-size: 28px;
     color: $color-font-darkgrey;
     text-align: start;
 
@@ -58,11 +59,8 @@
   }
 
   &__transcription {
-    font-family: $font-sans;
-    line-height: 1.4;
+    @include font(28px, 1.4, 400);
     margin: 0;
-    font-weight: 400;
-    font-size: 28px;
     text-align: start;
     color: $color-font-grey;
     padding-left: 12px;
@@ -88,11 +86,8 @@
   }
 
   &__text {
-    font-family: $font-sans;
-    line-height: 1.2;
+    @include font(20px, 1.2, 400);
     margin: 0;
-    font-weight: 1.3;
-    font-size: 20px;
     color: $color-font-darkgrey;
     white-space: nowrap;
     
