--- a/src/components/ui/TrainButton/TrainButton.module.scss
+++ b/src/components/ui/TrainButton/TrainButton.module.scss
@@ -1,13 +1,11 @@
 @import "../../../styles/variables";
 
 .trainButton {
+  @include font(20px, 32px, 400);
   display: block;
   width: 240px;
   min-height: 36px;
   height: fit-content;
-  line-height: 32px;
-  font-size: 20px;
-  font-family: sans-serif;
   text-decoration: none;
   color: $color-font-base;
   background-color: $color-button-training;
