--- a/src/pages/PageNotFound/PageNotFound.module.scss
+++ b/src/pages/PageNotFound/PageNotFound.module.scss
@@ -6,10 +6,7 @@
   align-items: center;
 
   &__title {
-    font-family: $font-sans;
-    font-weight: 400;
-    font-size: 140px;
-    line-height: 169px;
+    @include font(140px, 169px, 400);
     text-align: center;
     margin: 0;
     padding-top: 100px;
@@ -26,10 +23,7 @@
   }
 
   &__text {
-    font-family: $font-sans;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
+    @include font(16px, 19px, 400);
     text-align: center;
     margin: 0;
     padding-top: 5px;
@@ -45,10 +39,7 @@
   }
 
   &__link {
-    font-family: $font-sans;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
+    @include font(14px, 17px, 400);
     text-align: center;
     margin: 0;
     text-decoration: none;
@@ -64,17 +55,13 @@
     }
 
   &__arrowContainerTop {
-    display: flex;
-    flex-direction: column;
+    @include column;
     align-items: center;
   }
 
   &__text {
-    font-family: $font-sans;
-    line-height: 1.2;
+    @include font(20px, 1.3, 400);
     margin: 0;
-    font-weight: 1.3;
-    font-size: 20px;
     color: $color-font-darkgrey;
     white-space: nowrap;
   
