--- a/src/components/TrainScreenVariations/TrainScreenVariations.module.scss
+++ b/src/components/TrainScreenVariations/TrainScreenVariations.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables";
 
-.cardsHolder {
+.trainScreenChoises {
   @include column;
 
   justify-items: center;
@@ -30,43 +30,16 @@
     padding-bottom: 50px;
   }
 
-  &__buttonBlock {
+  &__chooseButtonBlock {
     @include row;
-    gap: 20px;
-    //justify-content: center;
 
-    
-    @media (max-width: 530px) {
-      flex-direction: column;
-      width: 85vw;
-      align-items: center;
-    }
-
-    @media (max-width: 530px) {
-      width: 100%;
-      max-width: 100%;
-      min-width: 250px;
-    }
-  }
-
-  &__titleRow {
-    @include row;
-    justify-content: space-between;
     width: 100%;
+    gap: 20px;
+    justify-content: space-around;;
     flex-wrap: wrap;
-    gap: 16px;
-    padding-bottom: 28px;
-  }
 
-  &__title {
-    @include font(24px, 27px, 400);
-
-    margin: 0;
-    font-weight: 500;
-
-    @media (max-width: 650px) {
-      font-size: 22px;
-      line-height: 22px;
+    @media (max-width: 470px) {
+      justify-content: space-evenly;
     }
   }
 
@@ -92,149 +65,26 @@
     }
   }
 
-  &__hint {
-    @include font(22px, 27px, 400);
-
-    margin: 0;
-    padding-bottom: 23px;
-    color: $color-font-grey;
-
-    &:hover {
-      @include hovered;
-    }
+  &__noHover:hover {
+    background-color: transparent;
+    opacity: 1;
+    cursor: auto;
   }
 
-  &__advice {
-    height: 42px;
-    max-width: 600px;
-
-    & p {
-      margin: 0;
-    }
-  }
-
-  &__arrowContainer {
-    @include column;
-    
-    justify-content: flex-end;
-    position: relative;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 200px;
-    align-content: center;
-    align-self: center;
-    margin-bottom: 20px;
-  }
-
-  &__repeatImg {
-    width: 90px;
-    height: 80px;
-
-    &:hover {
-      @include hovered;
-    }
-  }
-
-  &__text {
-    @media (max-width: 770px) {
-      font-size: 14px;
-      line-height: 22px;
-      max-width: 364px;
-    }
-    
-    @media (max-width: 650px) {
-      padding-right: 0;
-      font-size: 11px;
-      line-height: 16px;
-    }
-  }
-
-  &__decisionImg {
-    width: 80px;
-    height: 80px;
-  }
-
-  &__correct {
-    button {
-      background-color: #b1ff7c;
-    }
-  }
-
-  &__incorrect {
-    button {
-      background-color: rgb(243, 100, 75);
-    }
-  }
-
-  &__chooseButtonBlock {
+  &__buttonBlock {
     @include row;
-
-    width: 100%;
     gap: 20px;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    //justify-content: center;
 
-    @media (max-width: 470px) {
-      justify-content: space-evenly;
-    }
-  }
-
-  &__decisionBtn {
-    background-color: $color-background-card;
-    border-radius: 20px;
-    border: 1px solid $color-border-grey;
-    box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.4);
-
-    &:hover {
-      @include hovered;
-    }
-  }
-
-  &__wordCard {
-    background-color: $color-background-card;
-    border-radius: 20px;
-    justify-content: center;
-    border: 0.5px solid $color-border-grey;
-    min-width: 160px;
-    min-height: 80px;
-    flex-wrap: wrap;
-    padding: 20px;
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
-    max-width: 240px;
-    width: fit-content;
-    overflow: hidden;
-    gap: 6px;
-    align-items: center;
     
-    @media (max-width: 790px) {
-      max-width: 220px;
-      padding: 20px 12px;
+    @media (max-width: 550px) {
+      flex-direction: column;
+      width: 85vw;
+      align-items: center;
+      width: 100%;
+      max-width: 100%;
+      min-width: 250px;
     }
-  
-    @media (max-width: 490px) {
-      min-width: 120px;
-      padding: 20px 8px;
-    }
-  
-    @media (max-width: 390px) {
-      max-width: 120px;
-      padding: 16px 6px;
-      margin: 3px;
-    }
-  }
-}
-
-@import "../../styles/variables";
-
-@keyframes rotate {
-  from {
-    transform: rotateX(0deg);
-  }
-
-  to {
-    transform: rotateX(180deg);
   }
 }
 
@@ -272,72 +122,65 @@
     margin: 3px;
   }
 
-  &__img {
-    width: 60px;
-    height: 20px;
-    margin: 0 auto;
+  &__word {
+    font-family: $font-sans;
+    line-height: 1.3;
+    margin: 0;
+    font-weight: 600;
+    font-size: 26px;
+    color: $color-font-darkgrey;
+    text-align: center;
+    
+    @media (max-width: 490px) {
+      line-height: 20px;
+      font-size: 18px;
+    }
+  
+    @media (max-width: 390px) {
+      font-size: 16px;
+    }
+  }
 
+  &__text {
+    font-family: $font-sans;
+    line-height: 20px;
+    margin: 0;
+    font-weight: 500;
+    font-size: 15px;
+    color: $color-font-grey;
+    text-align: center;
+  
     &:hover {
       @include hovered;
-      filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 0.9));
+    }
+  }
+
+  &__translation {
+    background-color: $color-background;
+    line-height: 1.8;
+    border-radius: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0 3px;
+    margin: 4px 0;
+    width: 100%;
+    border: 2px solid transparent;
+    min-height: 30px;
+  
+    @media (max-width: 390px) {
+      font-size: 14px;
+      line-height: 26px;
+      margin: 6px 0;
     }
   }
 }
 
-.word {
-  font-family: $font-sans;
-  line-height: 1.3;
-  margin: 0;
-  font-weight: 600;
-  font-size: 26px;
-  color: $color-font-darkgrey;
-  text-align: center;
-  
-  @media (max-width: 490px) {
-    line-height: 20px;
-    font-size: 18px;
-  }
-
-  @media (max-width: 390px) {
-    font-size: 16px;
-  }
-}
-
-.translation {
-  background-color: $color-background;
-  line-height: 1.8;
-  border-radius: 10px;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 0 3px;
-  margin: 4px 0;
-  width: 100%;
-
-  @media (max-width: 390px) {
-    font-size: 14px;
-    line-height: 26px;
-    margin: 6px 0;
-  }
-}
-
-.text {
-  font-family: $font-sans;
-  line-height: 20px;
-  margin: 0;
-  font-weight: 500;
-  font-size: 15px;
-  color: $color-font-grey;
-  text-align: center;
-
-  &:hover {
-    @include hovered;
-  }
-}
-
 .correct {
-  background-color: #b1ff7c;
+  background-color: $color-input-correct;
+  border: 2px solid white;
 }
 
 .incorrect {
-  background-color:  rgb(243, 100, 75);
+  background-color: bisque;
+  border: 2px solid white;
 }
