--- a/src/components/LettersTrainMode/LettersTrainMode.module.scss
+++ b/src/components/LettersTrainMode/LettersTrainMode.module.scss
@@ -40,7 +40,7 @@
     }
   }
 
-  &__chooseButtonBlock {
+  &__letterButtonBlock {
     @include row;
 
     width: 100%;
@@ -80,7 +80,7 @@
 
   &__disabledAnswer {
     @include font(24px, 27px, 500);
-    opacity: 0.4;
+    opacity: 0.7;
     margin: 0;
 
     @media (max-width: 650px) {
